[package]
name = "eva"
version = "0.0.1"
authors = ["Stijn Seghers <stijnseghers@gmail.com>"]
edition = "2018"

[features]
default = ["clock"]
clock = ["chrono/clock"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]

[dependencies]
cfg-if = "0.1"
chrono = { version = "0.4", default-features = false }
derive-new = "0.5"
diesel = { version = "1.3", optional = true }
diesel_migrations = { version = "1.3", optional = true }
error-chain = "0.12"
futures-preview = "0.3.0-alpha.12"
lazy_static = "1.0"
take_mut = "0.2"

[dev-dependencies]
assert_matches = "1.1"
