[package]
name = "eva"
version = "0.0.1"
authors = ["Stijn Seghers <stijnseghers@gmail.com>"]
edition = "2018"

[features]
default = ["clock"]
clock = ["chrono/clock"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]

[dependencies]
cfg-if = "0.1"
chrono = { version = "0.4", default-features = false }
derive-new = "0.5"
diesel = { version = "1.4", optional = true }
diesel_migrations = { version = "1.4", optional = true }
failure = "0.1"
futures = "0.3"
itertools = "0.8"
take_mut = "0.2"

[dev-dependencies]
assert_matches = "1.3"
